// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fanyi CLI > should be able to config global options 1`] = `
"
 config --no-color  ~  iciba.com
 
 -----
 
"
`;

exports[`fanyi CLI > should be able to config global options 2`] = `
"
 config --color  ~  iciba.com
 
 -----
 
"
`;

exports[`fanyi CLI > should be able to config global options 3`] = `
"
 config --no-iciba  ~  iciba.com
 
 -----
 
"
`;

exports[`fanyi CLI > should be able to config global options 4`] = `
"
 config --iciba  ~  iciba.com
 
 -----
 
"
`;

exports[`fanyi CLI > should print config list if config list is given 1`] = `
"
 config list  ~  iciba.com
 
 -----
 
"
`;

exports[`fanyi CLI > should print help if -h is given 1`] = `
"Usage: fanyi [options] [command]

A translate tool in your command line

Options:
  -V, --version     output the version number
  -h, --help        display help for command

Commands:
  config [options]  Set the global options
  list [options]

Examples:
  $ fanyi word
  $ fanyi world peace
  $ fanyi chinglish

"
`;

exports[`fanyi CLI > should print search history 1`] = `
"2024-09-11
   xx
     abbr. without securities or warrants 无权或无保障（代号）；
   
   love
     vt.& vi. 爱，热爱；爱戴；喜欢；赞美，称赞；
     vt. 喜爱；喜好；喜欢；爱慕；
     n. 爱情，爱意；疼爱；热爱；爱人，所爱之物；
   word
     n. 单词；话语；诺言；消息；
     vt. 措辞，用词；用言语表达；
     vi. 讲话；
   config
     
   hello
     int. 哈喽，喂；你好，您好；表示问候；打招呼；
     n. “喂”的招呼声或问候声；
     vi. 喊“喂”；
   helxlo
     
   config list
     
   config --no-color
     
   config --color
     
   
"
`;

exports[`fanyi CLI > should print translation of the word 1`] = `
"
 hello  英[ hə'ləʊ ]  美[ həˈloʊ ]  ~  iciba.com
 - int. 哈喽，喂；你好，您好；表示问候；打招呼；
 - n. “喂”的招呼声或问候声；
 - vi. 喊“喂”；
 
 1. This document contains Hello application components of each document summary of the contents.
    此文件包含组成Hello应用程序的每个文件的内容摘要.
 2. Hello! Hello! Hello! Hello! Hel - lo!
    你好! 你好! 你好! 你好! 你好!
 3. Hello! Hello! Hello! Hello ! I'm glad to meet you.
    你好! 你好! 你好! 你好! 见到你很高兴.
 4. Hello Marie. Hello Berlioz. Hello Toulouse.
    你好玛丽, 你好柏里欧, 你好图鲁兹.
 5. Hello. Yes, hello, hello. I can not hear a word clearly.
    喂, 咦, 喂, 喂. 我一点也听不清.
 
 -----
 
"
`;

exports[`fanyi CLI > should print usage if no arguments are given 1`] = `
"Usage: fanyi [options] [command]

A translate tool in your command line

Options:
  -V, --version     output the version number
  -h, --help        display help for command

Commands:
  config [options]  Set the global options
  list [options]

Examples:
  $ fanyi word
  $ fanyi world peace
  $ fanyi chinglish

"
`;
